Fix tablecard spacing

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -219,7 +219,7 @@ a.link {
   display: grid;
     grid-template-columns: repeat(1, auto);
     grid-template-rows: auto;
-    grid-row-gap: 3px;
+    grid-row-gap: 15px;
     grid-auto-flow: row;
     margin-left: auto;
     margin-right: auto;
